fluxcd/app/front/webapp/test-jwtvalidation/patches-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: webapp-route
  namespace: prod-webapp
spec:
  rules:
    - backendRefs:
        - name: webapp
          port: 80
      filters:
        - extensionRef:
            group: gateway.k8s.aws
            kind: ListenerRuleConfiguration
            name: webapp-route-jwt-validation
          type: ExtensionRef
